// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteScroll basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div>
    0
  </div>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    0
  </div>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
</div>
`;

exports[`InfiniteScroll renderMarker 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

<div
  class="c0"
>
  <div>
    0
  </div>
  <div>
    1
  </div>
  <div>
    <div
      class="c1"
    />
  </div>
</div>
`;

exports[`InfiniteScroll replace 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

<div
  class="c0"
>
  <div>
    0
  </div>
  <div>
    1
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`InfiniteScroll show 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

<div
  class="c0"
>
  <div>
    0
  </div>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div
    class="c1"
  />
</div>
`;

exports[`InfiniteScroll specified show item index should be visible in window height 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 24px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
}

@media only screen and (max-width:768px) {
  .c1 {
    border-bottom: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:768px) {
  .c1 {
    padding: 12px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 1
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 2
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 3
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 4
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 5
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 6
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 7
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 8
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 9
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 10
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 11
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 12
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 13
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 14
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 15
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 16
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 17
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 18
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 19
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 20
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 21
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 22
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 23
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 24
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 25
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 26
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 27
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 28
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 29
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 30
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 31
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 32
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 33
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 34
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 35
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 36
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 37
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 38
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 39
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 40
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 41
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 42
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 43
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 44
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 45
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 46
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 47
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 48
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 49
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 50
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 51
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 52
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 53
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 54
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 55
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 56
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 57
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 58
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 59
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 60
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 61
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 62
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 63
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 64
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 65
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 66
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 67
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 68
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 69
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 70
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 71
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 72
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 73
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 74
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 75
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 76
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 77
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 78
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 79
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 80
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 81
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 82
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 83
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 84
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 85
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 86
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 87
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 88
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 89
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 90
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 91
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 92
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 93
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 94
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 95
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 96
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 97
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 98
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 99
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 100
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 101
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 102
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 103
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 104
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 105
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 106
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 107
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 108
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 109
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 110
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 111
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 112
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 113
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 114
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 115
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 116
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 117
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 118
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 119
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 120
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 121
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 122
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 123
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 124
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 125
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 126
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 127
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 128
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 129
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 130
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 131
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 132
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 133
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 134
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 135
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 136
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 137
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 138
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 139
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 140
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 141
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 142
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 143
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 144
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 145
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 146
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 147
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 148
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 149
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      item 150
    </span>
  </div>
  <div
    class="c3"
  />
</div>
`;

exports[`InfiniteScroll step 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0px;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

<div
  class="c0"
>
  <div>
    0
  </div>
  <div>
    1
  </div>
  <div
    class="c1"
  />
</div>
`;
